--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,224 @@
+/* Google Fonts */
 
+
+/* Quicksand */
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+.quicksand-font {
+  font-family: "Quicksand", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+/* Raleway Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+.raleway-font {
+  font-family: "Raleway", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
+
+/* Shared fonts */
+.font1{
+   font-size: 2rem;   /* 32px */
+   font-weight: bold; 
+}
+.font2{
+    font-size: 1.25rem;/* 20px */
+    font-weight: bold;
+}
+.font3{
+    font-size: 1.25rem;/* 20px */
+    font-weight:Medium;
+}
+.font4{
+    font-size: 3.5rem;
+    font-weight: bold;
+}
+.font5{
+font-size: 1.25rem;/* 20px */
+font-weight: normal;
+}
+.font6{
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+.font7{
+    font-size: 2.875rem;
+    font-weight: bold;
+}
+.font8{
+    font-size: 1.5325rem;
+    font-weight: bold;
+}
+.font9{
+    font-size: 0.943125rem;
+    font-weight: medium;
+
+}
+.font10{
+    font-size: 0.943125rem;
+    font-weight: bold;
+
+}
+.font11{
+    font-size: 0.95875rem;
+    font-weight: bold;
+
+}
+.font12{
+    font-size: 0.95875rem;
+    font-weight: medium;
+
+}
+.font13{
+    font-size:1.5rem;
+    font-weight: bold;
+
+}
+.font14{
+    font-size:2.63375rem;
+    font-weight: bold;
+
+}
+.font15{
+    font-size: 1.625rem;
+    font-weight: bold;
+}
+.font16{
+    font-size: 1.25;/* 20px */
+    font-weight:600px ;
+}
+/* Shared colors */
+
+
+.black{
+    color:rgba(17, 17, 17, 1) ;
+}
+.another-black{
+    color: rgba(0, 0, 0, 1);
+}
+.another-one-black{
+    color: rgba(32, 32, 32, 1);
+}
+.orange{
+    color:rgba(254, 163, 1, 1) ;
+}
+.another-orange{
+    color: rgba(240, 170, 0, 1);
+}
+.sky-blue{
+    color:rgba(1, 172, 253, 1) ;
+}
+.deep-sky-blue{
+    color: rgba(5, 212, 223, 1);
+
+}
+.another-sky-blue{
+    color:rgba(100, 200, 255, 1) ;
+}
+.purple{
+    color: rgba(93, 88, 239, 1);
+}
+.another-purple{
+    color: rgba(135, 0, 255, 1);
+}
+.white{
+    color: rgba(255, 255, 255, 1);
+}
+.grey{
+    color: rgba(128, 128, 128, 1);
+}
+.another-grey{
+    color: rgba(102, 102, 102, 1);
+}
+/* button design */
+.button1{
+   background-color:rgba(254, 163, 1, 1) ; 
+   border: 1px solid rgba(254, 163, 1, 1);
+   border-radius: 12px;
+   color:#FFFFFF ;
+   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+   padding: 10px 60.5px;
+   width: 197px;
+   height: 50px;
+   margin-right: 21.5px;
+}
+.button1:hover{
+    cursor: pointer;
+    background-color:rgba(254, 161, 1, 0.795) ; 
+}
+.button2{
+    background-color:rgba(17, 17, 17, 1)  ;
+    color: white;
+    border: 1px solid rgba(17, 17, 17, 1);
+    border-radius: 12px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    padding: 10px 47px;
+    
+}
+
+/* shared style */
+.display-flex{
+    display: flex;
+}
+.box-shadow{
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25); 
+}
+
+
+
+
+
+
+
+/* Header starts from here */
+/* navbar */
+.list{
+    list-style: none;
+    margin-right:32px ;
+}
+li >a{
+    text-decoration: none;
+}
+.nav-header-section{
+    max-width:1440px ;
+    margin: 0 auto;
+}
+
+.navbar{
+    
+    align-items: center;
+  }
+.nav-logo{
+    width: 62px;
+    height: 62px;
+    margin-right:11px ;
+    margin-left: 21.5px;
+}
+
+.nav-items{
+ margin: 16px 186px;
+}
+/* Empowering kids section  */
+
+.empower-student-header-section{
+    max-width: 1158.61px;
+    margin: 0 auto;
+}
+.hero-kids{
+margin-top: 26px;
+width: 461.61px;
+height: 575px;
+
+}
+.empower-header{
+    margin: 122px 50px 122px 0px;
+}
+.student-empower-description{
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
