--- a/styles/style.css
+++ b/styles/style.css
@@ -664,6 +664,8 @@ display: none;
 
 }
 .navbar{
+    justify-content: space-between;
+    padding: 0px;
     border-bottom: 1px solid rgba(254, 163, 1, 1);
 }
 .hamburger-menu{
@@ -671,10 +673,10 @@ display: none;
     color: black;
     cursor: pointer;
     display: block;
-    margin-left: 288px;
+    margin-left:290px;
     width: 30px;
     height: 30px;
-  
+   display: flex;
 }
 .nav-logo{
     width: 46px;
@@ -682,6 +684,8 @@ display: none;
     margin-bottom: 12px;
 }
 .empower-student-header-section{
+  
+ 
     /* width: 357px;
     height: 725px; */
     flex-direction: column-reverse;
@@ -695,7 +699,7 @@ display: none;
     width:335.58px;
     height:413px;
     margin: 8px 26px;
-    margin-left: 50px;
+    margin-left:40px;
     
     }
     .hero-kids{
@@ -704,18 +708,18 @@ display: none;
     .student-empower-title{
         font-size:2rem ;
         font-weight: bold;
-        margin-left: 50px;
+        margin-left: 20px;
     }
     .student-empower-description{
         font-size: 0.875rem;
         font-weight: medium;
         margin-top: 18px;
         margin-bottom: 18px;
-        margin-right:16px ;
-        margin-left: 50px;
+        margin-right:25px ;
+        margin-left: 25px;
     }
     .button2{
-        margin-left:170px ;
+        margin-left:110px ;
         width: 135px;
         height: 48px;
         border-radius: 8px;
@@ -730,7 +734,7 @@ display: none;
 
 
     .empower-header{
-        margin:20px auto ;
+        margin:15px auto ;
         align-items: center;
         width: 357px 120px;
   
@@ -738,6 +742,7 @@ display: none;
 .card2{
     width:173px ;
     height: 179px;
+    margin-bottom: 20px;
 }
 .card3{
     width:173px ;
@@ -838,7 +843,7 @@ display: none;
         cursor: pointer;
     }
     .button7{
-    
+    text-align: center;
      color: #FFFFFF;
       background-color: rgba(0, 0, 0, 1); ;
       border: none;
@@ -846,7 +851,7 @@ display: none;
       padding: 10px 61px; 
       padding: 10px 18px;
       margin-bottom: 30px;
-     
+    
 
       
     }.button7:hover{
@@ -855,7 +860,14 @@ display: none;
       cursor: pointer;
     }
     .btn-7{
-        margin: 0px auto;
+        align-items: center;
+        justify-items: center;
+        text-align: center;
+        margin-top: 0px;
+        margin-bottom: 60px;
+        margin: 0 auto;
+        margin-right:50px ;
+   
     }
     .card-title{
         font-size: 0.5625rem;
@@ -999,12 +1011,16 @@ display: none;
  }
 
 .card-design{
+    align-items: center;
+    justify-items: center;
     text-align: center;
     margin-top: 40px;
     margin-bottom: 60px;
     margin: 0 auto;
     width:400px ;
     height: 570px;
+    gap: 15px;
+    margin-left: 20px;
 }
 .body{
     margin: 0px;
