--- a/styles/style.css
+++ b/styles/style.css
@@ -900,6 +900,10 @@ display: none;
     grid-template-columns: repeat(2,1fr);
     gap: 10px;
 }
+.stories-title{
+    font-size: 1.625rem;
+    font-weight:bold ;
+}
 
 
 
@@ -945,6 +949,8 @@ display: none;
 }
 /* Standard curriculum section start from here */
 .Curriculum-title{
+    font-size: 1.625rem;
+    font-weight:bold ;
     text-align: center;
     margin-top: 60px;
     margin-bottom: 80px;
