--- a/styles/style.css
+++ b/styles/style.css
@@ -1024,6 +1024,7 @@ display: none;
     
 }
 .bg-image{
+    width: 100%;
     background-image: url(../assets/bg.png), linear-gradient(#FFFFFF,rgba(254, 161, 1, 0.3));
 }
 .bg-color-for-card{
