--- a/styles/style.css
+++ b/styles/style.css
@@ -681,6 +681,7 @@ display: none;
    display: none;
 
 }
+
 .navbar{
     justify-content: space-between;
     padding: 0px;
@@ -921,8 +922,9 @@ display: none;
 
 /* width and height */
  .footer-section{
-    padding:0px;
-    max-width: 1140px;
+    padding:15px;
+    box-sizing: border-box;
+   width: 374px;
     margin: 0 auto;
     height: 640px;
  }
@@ -1023,10 +1025,12 @@ display: none;
 
     
 }
+
 .bg-image{
-    width: 1140px;
+   
     background-image: url(../assets/bg.png), linear-gradient(#FFFFFF,rgba(254, 161, 1, 0.3));
 }
+
 .bg-color-for-card{
     background-color: #FFFFFF;
 }
@@ -1071,7 +1075,7 @@ display: none;
  .footer-section {
 
     display: block; 
-    width: 1140px;
+    width: 390px;
     height:642px;
     padding: 15px;
     background-color: rgba(1, 172, 253, 1); 
