--- a/styles/style.css
+++ b/styles/style.css
@@ -380,12 +380,15 @@ height: 575px;
 
     
 }
-.bg-image{
+.container{
     width: 100%;
+}
+.bg-image{
+    
     background-image: url(../assets/bg.png), linear-gradient(#FFFFFF,rgba(254, 161, 1, 0.3));
 }
 .bg-color-for-card{
-    background-color: #FFFFFF;
+    background-image: url(../assets/bg.png), linear-gradient(#FFFFFF,#FFFFFF);
 }
 
 .arrow{
@@ -728,9 +731,10 @@ display: none;
         margin: 0 auto;
     }
     .student-empower-title{
-        font-size:2rem ;
+        font-size:1rem ;
         font-weight: bold;
-        margin-left: 20px;
+       
+        margin-left: 5px;
     }
     .student-empower-description{
         font-size: 0.875rem;
@@ -933,7 +937,7 @@ display: none;
  }
  .bg-color{
     max-width: 1140px;
-    margin: 0 auto;
+    
  }
 
 .card-design{
@@ -1082,6 +1086,7 @@ display: none;
     width: 390px;
     height:642px;
     padding: 15px;
+    margin: 0 auto;
     background-color: rgba(1, 172, 253, 1); 
 }
 
